--- a/data/friends-manager.ui
+++ b/data/friends-manager.ui
@@ -101,7 +101,7 @@
                     <property name="visible">True</property>
                     <property name="spacing">5</property>
                     <child>
-                      <object class="GtkButton" id="follow_add">
+                      <object class="GtkButton" id="user_follow">
                         <property name="label" translatable="yes">gtk-add</property>
                         <property name="visible">True</property>
                         <property name="sensitive">False</property>
@@ -117,7 +117,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="follow_rem">
+                      <object class="GtkButton" id="user_unfollow">
                         <property name="label" translatable="yes">gtk-remove</property>
                         <property name="visible">True</property>
                         <property name="sensitive">False</property>
@@ -128,7 +128,21 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="position">1</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="user_block">
+                        <property name="label" translatable="yes">_Block</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip_text" translatable="yes">Block this user from being able to see your tweets or send you messages.</property>
+                        <property name="image">block_image</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                      <packing>
+                        <property name="position">4</property>
                       </packing>
                     </child>
                     <child>
@@ -144,7 +158,8 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="position">2</property>
+                        <property name="pack_type">end</property>
+                        <property name="position">3</property>
                       </packing>
                     </child>
                     <child>
@@ -160,7 +175,8 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
-                        <property name="position">3</property>
+                        <property name="pack_type">end</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
                   </object>
@@ -200,6 +216,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -215,5 +233,12 @@
     <action-widgets>
       <action-widget response="-5">lists_close</action-widget>
     </action-widgets>
+  </object>
+  <object class="GtkImage" id="block_image">
+    <property name="width_request">24</property>
+    <property name="height_request">24</property>
+    <property name="visible">True</property>
+    <property name="tooltip_text" translatable="yes">Block this user from being able to see your tweets or send you messages.</property>
+    <property name="stock">gtk-stop</property>
   </object>
 </interface>
