Greet-Tweet-Know 0.0.0c9: easier keyboad shortcuts for sending Tweets
I've update Greet-Tweet-Know to make sending various Tweets easier & quicker.  I've updated the window shortcuts & the status bar message that lists Greet-Tweet-Know's HotKeys.

Greet-Tweet-Know's Tweet HotKeys are now [Return] and '@' for replying, '>' for re-tweets, [Ctrl+N] starts a new tweet, [Ctrl+D] and <Shift>+[Return] both start a DM.

Committed on: 2009-04-05 @ 10:08:42 PM

--- a/data/main-window.ui
+++ b/data/main-window.ui
@@ -64,7 +64,7 @@
             <property name="name">tweets_reply</property>
             <property name="label">New _@ Reply</property>
           </object>
-          <accelerator key="at" modifiers="GDK_CONTROL_MASK"/>
+          <accelerator key="at"/>
         </child>
         <child>
           <object class="GtkAction" id="tweets_retweet">
@@ -72,7 +72,7 @@
             <property name="name">tweets_retweet</property>
             <property name="label">_Retweet</property>
           </object>
-          <accelerator key="f" modifiers="GDK_CONTROL_MASK"/>
+          <accelerator key="greater"/>
         </child>
         <child>
           <object class="GtkAction" id="tweets_new_dm">
@@ -82,6 +82,7 @@
             <property name="label">New _DM</property>
           </object>
           <accelerator key="d" modifiers="GDK_CONTROL_MASK"/>
+          <accelerator key="Return" modifiers="GDK_SHIFT_MASK"/>
         </child>
         <child>
           <object class="GtkAction" id="friends">
