--- a/data/glade/main-window.glade
+++ b/data/glade/main-window.glade
@@ -134,7 +134,7 @@
                         <property name="sensitive">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
-                        <accelerator key="at" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="at" signal="activate"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="image8">
                             <property name="visible">True</property>
@@ -150,7 +150,7 @@
                         <property name="sensitive">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
-                        <accelerator key="f" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="greater" signal="activate"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="image9">
                             <property name="visible">True</property>
@@ -167,6 +167,7 @@
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
                         <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="image10">
                             <property name="visible">True</property>
