--- a/data/friends-manager.ui
+++ b/data/friends-manager.ui
@@ -18,9 +18,10 @@
   </object>
   <object class="GtkDialog" id="friends_manager">
     <property name="visible">True</property>
-    <property name="title" translatable="yes">Users settings</property>
-    <property name="default_width">330</property>
-    <property name="default_height">295</property>
+    <property name="title" translatable="yes">Friends Manager</property>
+    <property name="default_width">450</property>
+    <property name="default_height">425</property>
+    <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox5">
@@ -135,6 +136,7 @@
                       <object class="GtkButton" id="user_block">
                         <property name="label" translatable="yes">_Block</property>
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="tooltip_text" translatable="yes">Block this user from being able to see your tweets or send you messages.</property>
