--- a/data/glade/main-window.glade
+++ b/data/glade/main-window.glade
@@ -166,8 +166,8 @@
                         <property name="tooltip" translatable="yes">Send a new Direct Message to one of your friends</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
-                        <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
+                        <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="image10">
                             <property name="visible">True</property>
@@ -428,16 +428,7 @@
                 <property name="visible">True</property>
                 <property name="spacing">2</property>
                 <child>
-                  <widget class="GtkLabel" id="expand_title">
-                    <property name="visible">True</property>
-                    <property name="xalign">0</property>
-                    <property name="xpad">5</property>
-                    <property name="ypad">3</property>
-                    <property name="use_markup">True</property>
-                  </widget>
-                  <packing>
-                    <property name="position">0</property>
-                  </packing>
+                  <placeholder/>
                 </child>
                 <child>
                   <placeholder/>
