Greet-Tweet-Know 0.0.eCa666: *the arg release* - great stuff but a pain in my neck.
I've added, improved, refactored, and fix a ton of various things in this release.  In this official release.  I have refactored my friends manager's profile viewer, the timeline view, and the 'extended tweets' box/area.  There are also countless bug fixes in this version.  Literally I've lost count.

I'm using libsexy to display the user's @username, URL, & Bio/Description to Greet-Tweet-Know's profile viewer and the extended tweet viewer so now links & etc can be clicked on to open the page in the GNOME/GTK's default viewer.

I have removed the 'preference' for displaying usernames.  Greet-Tweet-Know now displays them both.  It does this in the timeline viewer, extended tweets, and in my profile viewer.

I have also fixed a bug with my network timer that was causing re-logins to fail.  Lastly I fixed an odd issue that was causeing Greet-Tweet-Know to segfault when exiting if my friends-manager or friends viewer was selected some time during the session.

Lastly I've implemented basic signal processing & handling.  So now greet-tweet-know will only run once & than signal action based an command line arguments.  Right now greet-Tweet-Know doesn't support any command line arguments.  But I'm planning on having it support getting a tweet uri.  For example 'tweet://twitter.com/' would start an new tweet, 'tweet://twitter.com/@username' will start a new reply, and 'tweet://twitter.com/username' would start a new direct message.

Lastly I've fixed the bug that was causing Greet-Tweet-Know to segfault when the friends manager was loaded for the second time.  Lastly I have improved how Greet-Tweet-Know monitors Twitter's 'X-RateLimit-Remaining' header to try & avoid ever reaching their limit.

I have also updated several of the gtkbuilder user interface files.  I have changed the 'alt' hotkeys, ie what's underlined.  So now they're more intuitive.  I have also fixed several places where the

--- a/data/main-window.ui
+++ b/data/main-window.ui
@@ -34,7 +34,7 @@
           <object class="GtkAction" id="preferences">
             <property name="stock_id">gtk-preferences</property>
             <property name="name">preferences</property>
-            <property name="label" translatable="yes">_Preferences</property>
+            <property name="label" translatable="yes">Prefere_nces</property>
           </object>
         </child>
         <child>
@@ -308,6 +308,7 @@
                 <property name="visible">True</property>
                 <property name="spacing">2</property>
                 <child>
+                  <placeholder/>
                 </child>
                 <child>
                   <placeholder/>
