--- a/data/glade/main-window.glade
+++ b/data/glade/main-window.glade
@@ -69,7 +69,7 @@
                     </child>
                     <child>
                       <widget class="GtkImageMenuItem" id="preferences">
-                        <property name="label" translatable="yes">_Preferences</property>
+                        <property name="label" translatable="yes">Prefere_nces</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
@@ -166,8 +166,8 @@
                         <property name="tooltip" translatable="yes">Send a new Direct Message to one of your friends</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">False</property>
-                        <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                         <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="Return" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="image10">
                             <property name="visible">True</property>
